--- a/app/views/item.html
+++ b/app/views/item.html
@@ -1,9 +1,9 @@
-<div ng-controller="" id="itemPage">
+<div id="itemPage">
 	<div class="background">
 		<header class="row">
 			<div class="small-1 columns back"><i class="icon-arrow-left"></i></div>
 			<div class="small-8 columns">
-				<span><a href="company">Publisher: 10 Gorillas</a></span>
+				<span><a href="company">10 Gorillas</a></span>
 				<h1>10 Gorillas Multiplication</h1>
 				<span class="specs">Web based application | Requires: Modern web browser (IE8+, FF5+, Chrome 10+)</span>
 			</div>
@@ -19,43 +19,50 @@
 			</div>
 		</header>
 	</div>
-	<div class="row toprow">
-		<div class="small-4 columns">
-			<div class="item-picture">
-			</div>
-			<h3>Pricing</h3>
+
+	<tabset>
+		<tab heading="Home">
 			<div class="row">
-				<div class="small-12 columns">
-					<h4>Single licence:</h4>
-					<p>6,99€/month</p>
+				<div class="small-4 columns">
+					<div class="item-picture">
+					</div>
+					<h3>Pricing</h3>
+					<div class="row">
+						<div class="small-12 columns">
+							<h4>Single licence:</h4>
+							<p>6,99€/month</p>
+						</div>
+						<div class="small-12 columns">
+							<h4>1 classroom:</h4>
+							<p>20 credits</p>
+						</div>
+						<div class="small-12 columns">
+							<h4>Whole school:</h4>
+							<button>Contact us</button>
+						</div>	
+					</div>
 				</div>
-				<div class="small-12 columns">
-					<h4>1 classroom:</h4>
-					<button>Contact us</button>
+				<div class="small-8 columns">
+					<div class="ingress">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat fringilla lacinia. Donec tempus massa erat. Cras eget mollis lectus. Vestibulum posuere molestie vulputate. Nunc porttitor semper commodo. Proin vel scelerisque dui. Sed fermentum neque sed felis lobortis congue. Maecenas sed neque dignissim, consequat justo nec, dictum ligula</p>
+						<a class="button">Download a demo</a>
+						<hr>
+					</div>
+					<h2>Awesome way to learn multiplying!</h2>
+					<p>
+					Phasellus a iaculis lectus. Nulla ut ligula ultricies, luctus felis et, cursus mauris. Duis dictum laoreet est, vel tincidunt felis pretium quis. Sed consectetur convallis turpis mollis suscipit. In ac ullamcorper purus. Morbi rhoncus lectus sapien, malesuada suscipit orci consequat ac. Nullam condimentum felis nunc, feugiat sodales lorem venenatis sit amet. Nulla interdum pulvinar mi, id ornare est rhoncus non. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In eget leo dignissim, tincidunt leo nec, iaculis nunc.</p>
+					<p>
+
+					Etiam in enim non mi viverra pharetra mattis sed metus. Sed sed nibh ut diam dictum imperdiet. Fusce imperdiet porta lacinia. Nam vel tincidunt ante. Vestibulum consequat nisl a ullamcorper luctus. Nullam elementum interdum lorem, vitae convallis enim consequat in. Suspendisse vel bibendum eros, in ultrices est. Integer accumsan consequat nisl, non lobortis urna dignissim porttitor. Nunc malesuada euismod nibh, eu cursus dui placerat at. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus laoreet justo eget nunc bibendum, et viverra justo euismod. Nulla non ipsum luctus, facilisis urna in, fringilla diam. Ut pellentesque erat ac elit consequat pulvinar. Nullam eleifend tincidunt pulvinar.</p><p>
+
+					Duis metus ante, euismod sit amet porttitor in, dignissim eu lacus. Phasellus egestas semper augue, sit amet porttitor metus sagittis vel. Nunc vitae tincidunt sapien, ac ultricies lectus. Vivamus in accumsan tortor, nec suscipit sapien. Maecenas tortor dolor, laoreet ac mattis nec, viverra id neque. Integer et velit faucibus, varius lacus quis, convallis metus. Curabitur placerat lorem in gravida dictum. Duis et rutrum mi. Integer feugiat nisl nec sem bibendum gravida. Integer in dolor sodales, venenatis velit quis, rutrum elit. Sed bibendum turpis eu felis consectetur, vitae pellentesque odio posuere. Nulla sit amet vulputate ipsum.</p>
+							
 				</div>
-				<div class="small-12 columns">
-					<h4>Whole school:</h4>
-					<button>Contact us</button>
-				</div>	
 			</div>
-		</div>
-		<aside class="small-8 columns">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat fringilla lacinia. Donec tempus massa erat. Cras eget mollis lectus. Vestibulum posuere molestie vulputate. Nunc porttitor semper commodo. Proin vel scelerisque dui. Sed fermentum neque sed felis lobortis congue. Maecenas sed neque dignissim, consequat justo nec, dictum ligula</p>
-			<ul>
-				<li>Suitable for: Teaching multiplication, classes 1-3</li>
-			</ul>
-			<hr>
-				<h2>Awesome way to learn multiplying!</h2>
-				<p>
-				Phasellus a iaculis lectus. Nulla ut ligula ultricies, luctus felis et, cursus mauris. Duis dictum laoreet est, vel tincidunt felis pretium quis. Sed consectetur convallis turpis mollis suscipit. In ac ullamcorper purus. Morbi rhoncus lectus sapien, malesuada suscipit orci consequat ac. Nullam condimentum felis nunc, feugiat sodales lorem venenatis sit amet. Nulla interdum pulvinar mi, id ornare est rhoncus non. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In eget leo dignissim, tincidunt leo nec, iaculis nunc.</p>
-				<p>
-
-Etiam in enim non mi viverra pharetra mattis sed metus. Sed sed nibh ut diam dictum imperdiet. Fusce imperdiet porta lacinia. Nam vel tincidunt ante. Vestibulum consequat nisl a ullamcorper luctus. Nullam elementum interdum lorem, vitae convallis enim consequat in. Suspendisse vel bibendum eros, in ultrices est. Integer accumsan consequat nisl, non lobortis urna dignissim porttitor. Nunc malesuada euismod nibh, eu cursus dui placerat at. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus laoreet justo eget nunc bibendum, et viverra justo euismod. Nulla non ipsum luctus, facilisis urna in, fringilla diam. Ut pellentesque erat ac elit consequat pulvinar. Nullam eleifend tincidunt pulvinar.</p><p>
-
-Duis metus ante, euismod sit amet porttitor in, dignissim eu lacus. Phasellus egestas semper augue, sit amet porttitor metus sagittis vel. Nunc vitae tincidunt sapien, ac ultricies lectus. Vivamus in accumsan tortor, nec suscipit sapien. Maecenas tortor dolor, laoreet ac mattis nec, viverra id neque. Integer et velit faucibus, varius lacus quis, convallis metus. Curabitur placerat lorem in gravida dictum. Duis et rutrum mi. Integer feugiat nisl nec sem bibendum gravida. Integer in dolor sodales, venenatis velit quis, rutrum elit. Sed bibendum turpis eu felis consectetur, vitae pellentesque odio posuere. Nulla sit amet vulputate ipsum.</p>
-	
-		</aside>
-	</div>
-
+		</tab>
+		<tab heading="Reviews (5)"></tab>
+		<tab heading="Discussion"></tab>
+		<tab heading="Specifications"></tab>
+	</tabset>
 	
 </div>
