--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,7 +9,22 @@
 
 	<tabset>
 		<tab heading="Home">
-
+			<div class="row">
+				<div class="medium-7 columns">
+					<div class="carousel">
+						<img src="/images/GB_PracticeMode.jpg">
+						<div class="caption">
+							<h1>Guitar Bots</h1>
+							<div class="info">
+								<span class="autor"><a href="#">Ovelin</a></span>
+							</div>
+							<p>This is a cool text related the product</p>
+						</div>
+						<a href="#" class="prev"><i class="icon-arrow-left"></i></a> 
+						<a href="#" class="next"><i class="icon-arrow-right"></i></a> 
+					</div>
+				</div>
+			</div>
 			<div class="row">
 					<h2>New arrivals</h2>
 					<ul class="item-list horizontal"> 
@@ -84,8 +99,9 @@
 					</ul>
 			</div>
 			<div class="row">
+				<div class="small-4 columns">
 					<h2>Most liked in this month</h2>
-					<ul class="item-list horizontal"> 
+					<ul class="item-list"> 
 						<li class="row">
 							<div class="medium-3 columns">
 								<a href="#/music" class="hex-item">
@@ -156,9 +172,10 @@
 						</li>
 					</ul>
 				</div>
-				<div class="row">
+
+				<div class="small-4 columns">
 						<h2>This week at Cloudclub</h2>
-						<ul class="item-list horizontal"> 
+						<ul class="item-list"> 
 							<li class="row">
 								<div class="medium-3 columns">
 									<a href="#/music" class="hex-item">
@@ -230,6 +247,7 @@
 						</ul>
 					<div ui-view></div>
 				</div>
+			</div>
 		</tab>
 		<tab heading="Subjects">
 			<div class="medium-12 columns subjects">
