--- a/app/views/music-theory.html
+++ b/app/views/music-theory.html
@@ -60,7 +60,7 @@
 		<ul class="item-list detailed">
 			<li class="medium-4 columns">
 				<div class="medium-3 columns">
-					<a href="#/music" class="hex-item">
+					<a href="#/item" class="hex-item">
 						<div class="hex">   
 							<div class="inner">
 							</div>    
