--- a/app/views/music.html
+++ b/app/views/music.html
@@ -65,8 +65,9 @@
 								<span class="autor"><a href="#">Ovelin</a></span>
 							</div>
 							<p>This is a cool text related the product</p>
-
 						</div>
+						<a href="#" class="prev"><i class="icon-arrow-left"></i></a> 
+						<a href="#" class="next"><i class="icon-arrow-right"></i></a> 
 					</div>
 					<div class="row">
 						<ul class="item-list horizontal simple"> 
@@ -82,9 +83,12 @@
 										</div>
 									</a>
 								</div>
-								<div class="medium-12 columns">
+								<div class="medium-12 columns" popover="I appeared on mouse enter!" popover-trigger="mouseenter" >
 									<h3>The basics of Ukulele</h3>
-									<span class="author">Rockway</span>
+									<div class="info">
+										<span class="author">Rockway</span>
+										<span class="price">Free</span>
+									</div>
 								</div>
 							</li>
 							<li class="row">
@@ -100,7 +104,10 @@
 								</div>
 								<div class="medium-12 columns">
 									<h3>GuitarBots</h3>
-									<span class="author">Ovelin</span>
+									<div class="info">
+										<span class="author">Ovelin</span>
+										<span class="price">6,96€</span>
+									</div>
 								</div>
 							</li>
 							<li class="row">
@@ -116,7 +123,10 @@
 								</div>
 								<div class="medium-12 columns">
 									<h3>Geogebra</h3>
-									<span class="author">Geogebra</span>
+									<div class="info">
+										<span class="author">Geogebra</span>
+										<span class="price">6,96€</span>
+									</div>
 								</div>
 							</li>
 							<li class="row">
@@ -134,6 +144,7 @@
 									<h3>Some item</h3>
 									<span class="author">Publisher</span>
 								</div>
+
 							</li>
 						</ul>
 					</div>
@@ -209,7 +220,7 @@
 				</div>
 				<div class="medium-4 columns right-col">
 					<section>
-						<h3>Latest blog posts related to Music</h3>
+						<h3>Latest magazine posts related to Music</h3>
 						<ul class="post-list">
 							<li class="row">
 								<a href="#">
