--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -13,6 +13,14 @@ body {
 
 header {
 	padding: 2em 0;
+
+	overflow: hidden;
+	background: #4FC8F8;
+	a, h1 {
+		color: #fff;
+	}
+
+
 	.breadcrumb {
 		color: $blue;
 		i {
@@ -31,5 +39,14 @@ header {
 	}
 	.search {
 		margin-top: 1em;
+	}
+	.header-image {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 170px;
+		opacity: 0.2;
+		-webkit-filter: grayscale(100%);
 	}
 }
