Frontpage facelift & navigation restructuring

--- a/app/styles/_navigation.scss
+++ b/app/styles/_navigation.scss
@@ -42,7 +42,7 @@ $mutedBlack: #333;
 	left: 0;
 	height: 100%;
 	width: 200px;
-	background: $blue;
+	background: #ACD2E0;
 	box-shadow: 0 0 3px #222;
 	overflow-x: hidden;
 	overflow-y: auto;
